@@ -13,12 +13,12 @@ import net.minecraft.network.chat.TextColor;
 
 import java.util.List;
 
-public class TitledTextScreenPage extends FormattedTextPage {
+public class TitledTextPage extends FormattedTextPage {
 
     protected final Component title;
     protected final Rectangle page;
 
-    public TitledTextScreenPage(BookScreen parent, Component title, List<TextChunk> text, int textY, Rectangle page) {
+    public TitledTextPage(BookScreen parent, Component title, List<TextChunk> text, int textY, Rectangle page) {
         super(parent, text, 0, textY);
         this.title = title;
         this.page = page;
