@@ -8,12 +8,14 @@ import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.resources.ResourceLocation;
 
-public record OpenEntryPayload(ResourceLocation book, String entry) implements CustomPacketPayload {
+import java.util.Optional;
+
+public record OpenEntryPayload(Optional<ResourceLocation> book, String entry) implements CustomPacketPayload {
 
 	public static final Type<OpenEntryPayload> TYPE = new Type<>(Modopedia.id("open_entry"));
 
 	public static final StreamCodec<ByteBuf, OpenEntryPayload> STREAM_CODEC = StreamCodec.composite(
-			ResourceLocation.STREAM_CODEC, OpenEntryPayload::book,
+			ByteBufCodecs.optional(ResourceLocation.STREAM_CODEC), OpenEntryPayload::book,
 			ByteBufCodecs.STRING_UTF8, OpenEntryPayload::entry,
 			OpenEntryPayload::new
 	);
@@ -24,7 +26,7 @@ public record OpenEntryPayload(ResourceLocation book, String entry) implements C
 	}
 
 	public void handle() {
-		BookOpenHandler.tryOpenEntry(book, entry);
+		book.ifPresentOrElse(id -> BookOpenHandler.tryOpenEntry(id, entry), () -> BookOpenHandler.tryOpenEntry(entry));
 	}
 
 }
