@@ -16,6 +16,8 @@ public class MLanguageProvider extends LanguageProvider {
 
         add(Modopedia.translation("tooltip", "book_id"), "Book ID: %1$s");
         add(Modopedia.translation("tooltip", "study"), "Shift");
+        add(Modopedia.translation("tooltip", "category_link"), "Go to category");
+        add(Modopedia.translation("tooltip", "entry_link"), "Go to entry");
 
         add(Modopedia.translation("screen", "error"), "Error");
         add(Modopedia.translation("screen", "categories"), "Chapters");
